# nonebot_plugin_weather_lite

./: .gitignore  README.md  pyproject.toml
src/nonebot_plugin_weather_lite/: __init__.py  config.py
